[gd_scene load_steps=2 format=2]

[ext_resource path="res://demos/face/GUI.gd" type="Script" id=1]

[node name="GUI" type="MarginContainer"]
anchor_bottom = 1.0
margin_right = 40.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 212.0
margin_bottom = 580.0

[node name="MaxSpeed" type="HBoxContainer" parent="Controls"]
margin_right = 192.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Controls/MaxSpeed"]
margin_top = 4.0
margin_right = 130.0
margin_bottom = 19.0
rect_min_size = Vector2( 130, 15 )
text = "Max speed"

[node name="LineEdit" type="LineEdit" parent="Controls/MaxSpeed"]
margin_left = 134.0
margin_right = 192.0
margin_bottom = 24.0
focus_mode = 1

[node name="MaxAccel" type="HBoxContainer" parent="Controls"]
margin_top = 28.0
margin_right = 192.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="Controls/MaxAccel"]
margin_top = 4.0
margin_right = 130.0
margin_bottom = 19.0
rect_min_size = Vector2( 130, 15 )
text = "Max acceleration"

[node name="LineEdit" type="LineEdit" parent="Controls/MaxAccel"]
margin_left = 134.0
margin_right = 192.0
margin_bottom = 24.0
focus_mode = 1

[node name="AlignmentTolerance" type="HBoxContainer" parent="Controls"]
margin_top = 56.0
margin_right = 192.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="Controls/AlignmentTolerance"]
margin_top = 4.0
margin_right = 130.0
margin_bottom = 19.0
rect_min_size = Vector2( 130, 15 )
text = "Alignment tolerance"

[node name="LineEdit" type="LineEdit" parent="Controls/AlignmentTolerance"]
margin_left = 134.0
margin_right = 192.0
margin_bottom = 24.0
focus_mode = 1

[node name="DecelerationRadius" type="HBoxContainer" parent="Controls"]
margin_top = 84.0
margin_right = 192.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="Controls/DecelerationRadius"]
margin_top = 4.0
margin_right = 130.0
margin_bottom = 19.0
rect_min_size = Vector2( 130, 15 )
text = "Deceleration radius"

[node name="LineEdit" type="LineEdit" parent="Controls/DecelerationRadius"]
margin_left = 134.0
margin_right = 192.0
margin_bottom = 24.0
focus_mode = 1

[node name="Help" type="VBoxContainer" parent="Controls"]
margin_top = 112.0
margin_right = 192.0
margin_bottom = 164.0

[node name="Controls" type="Label" parent="Controls/Help"]
margin_right = 192.0
margin_bottom = 14.0
text = "Controls"

[node name="GridContainer" type="GridContainer" parent="Controls/Help"]
margin_top = 18.0
margin_right = 192.0
margin_bottom = 52.0
columns = 3

[node name="Sep" type="Control" parent="Controls/Help/GridContainer"]
margin_right = 15.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )

[node name="W" type="Label" parent="Controls/Help/GridContainer"]
margin_left = 19.0
margin_right = 34.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )
text = "W"
align = 1

[node name="Sep2" type="Control" parent="Controls/Help/GridContainer"]
margin_left = 38.0
margin_right = 53.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )

[node name="A" type="Label" parent="Controls/Help/GridContainer"]
margin_top = 19.0
margin_right = 15.0
margin_bottom = 34.0
rect_min_size = Vector2( 15, 15 )
text = "A"
align = 1

[node name="S" type="Label" parent="Controls/Help/GridContainer"]
margin_left = 19.0
margin_top = 19.0
margin_right = 34.0
margin_bottom = 34.0
rect_min_size = Vector2( 15, 15 )
text = "S"
align = 1

[node name="D" type="Label" parent="Controls/Help/GridContainer"]
margin_left = 38.0
margin_top = 19.0
margin_right = 53.0
margin_bottom = 34.0
rect_min_size = Vector2( 15, 15 )
text = "D"
align = 1
